--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,7 +73,7 @@ img {
     width: 100%;
     height: 40px;
     z-index: 2000;
-    transition: background-color 0.5s, height 0.5s;
+    transition: background-color 0.5s, height 0.5s, padding 0.5s;
 }
 
 .navbar {
@@ -122,6 +122,7 @@ img {
 .header_active {
     background-color: var(--bodyColor);
     height: 60px;
+    padding-top: 0.5rem;
     box-shadow: 2px 12px 8px -3px rgba(0, 0, 0, 0.11);
     -webkit-box-shadow: 2px 12px 8px -3px rgba(0, 0, 0, 0.11);
     -moz-box-shadow: 2px 12px 8px -3px rgba(0, 0, 0, 0.11);
@@ -248,6 +249,11 @@ img {
     font-weight: bold;
     color: white;
     background-color: var(--buttonColor);
+    transition: background-color 0.5s;
+}
+
+.presentation_body a:hover {
+    background-color: var(--buttonColorHover);
 }
 
 
@@ -329,10 +335,57 @@ img {
     border-radius: 0rem 0rem 1rem 1rem;
 }
 
+/* todo<--------------------------------------- CART ---------------------------------------> */
+.cart {
+    height: 100vh;
+    width: 400px;
+    background-color: var(--bodyColor);
+    position: fixed;
+    top: 0px;
+    right: -100%;
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    transition: right 0.5s;
+    box-shadow: -10px 3px 19px -6px rgba(0, 0, 0, 0.19);
+    -webkit-box-shadow: -10px 3px 19px -6px rgba(0, 0, 0, 0.19);
+    -moz-box-shadow: -10px 3px 19px -6px rgba(0, 0, 0, 0.19);
+    z-index: 6000;
+}
+
+.cart_show {
+    right: 0px;
+
+}
+
+.icon_close {
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: var(--titleColor);
+
+}
+
+.icon_close i {
+    cursor: pointer;
+}
+
+
+.cart_products {
+    background-color: blue;
+    height: 80%;
+}
+
+.cart_total {
+    background-color: red;
+    height: 15%;
+}
 
 
 
-/* todo<--------------------------------------- FOOTER ---------------------------------------> */
+/* !<--------------------------------------- FOOTER ---------------------------------------> */
 .footer {
     padding: 1rem;
     background-color: var(--cardColor);
@@ -365,6 +418,15 @@ img {
 
 .footer_reference li {
     color: var(--textColor);
+}
+
+.footer_reference a {
+    transition: color 0.5s;
+}
+
+
+.footer_reference a:hover {
+    color: var(--titleColor);
 }
 
 .footer_reference:nth-child(4) ul {
