--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,6 +65,42 @@ img {
     display: block;
 }
 
+/* * <---------------------------------------> preloader <---------------------------------------> */
+.preloader {
+    width: 100%;
+    height: 100%;
+    background-color: var(--bodyColor);
+    position: fixed;
+    left: 0;
+    top: 0;
+    z-index: 7000;
+    transition: display 0.5s;
+}
+
+.spin {
+
+    width: 90px;
+    height: 90px;
+    border-top: 5px solid var(--primaryColor);
+    border-right: 5px solid var(--primaryColor);
+    border-radius: 50%;
+    animation: spin 1s linear infinite;
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    z-index: 8000;
+}
+
+.spin>div {
+    box-sizing: border-box;
+    margin: auto;
+    width: 100%;
+    height: 100%;
+    animation: spin 1s linear infinite;
+}
 
 /* * <---------------------------------------> NAVBAR <---------------------------------------> */
 .header {
