--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -397,14 +397,14 @@ button.active {
 }
 
 
-.product__name{
+.product__name {
     margin-top: 0.35rem;
     cursor: pointer;
     font-size: 1.2rem;
     transition: color 0.5s;
 }
 
-.product__name:hover{
+.product__name:hover {
     color: var(--primaryColor);
 }
 
@@ -631,7 +631,7 @@ button.active {
     align-items: center;
     opacity: 0;
     visibility: hidden;
-    transition: opacity .2s ease-in-out,visibility .2s ease-in-out;
+    transition: opacity .2s ease-in-out, visibility .2s ease-in-out;
 }
 
 .show__modal {
@@ -641,13 +641,13 @@ button.active {
     cursor: pointer
 }
 
-.modal__x{
+.modal__x {
     display: flex;
     justify-content: end;
     width: 100%;
 }
 
-.bx-x{
+.bx-x {
     border-radius: 0rem 1rem 0rem 1rem;
     background-color: var(--titleColor);
     font-size: 2.4rem;
@@ -655,7 +655,7 @@ button.active {
     transition: color 0.6s;
 }
 
-.bx-x:hover{
+.bx-x:hover {
     color: var(--primaryColor);
 }
 
@@ -664,7 +664,7 @@ button.active {
     border-radius: 1rem;
     width: 400px;
     height: 540px;
-    
+
 
 }
 
@@ -692,7 +692,7 @@ button.active {
 }
 
 
-.modal__name{
+.modal__name {
     margin-top: 0.35rem;
     cursor: pointer;
     font-size: 1.4rem;
@@ -700,14 +700,14 @@ button.active {
     font-weight: bold;
 }
 
-.modal__description{
+.modal__description {
     color: var(--textColorLight);
     margin-top: .2rem;
     font-size: .88rem;
     width: 100%;
 }
 
-.modal__info{
+.modal__info {
     margin-top: 0.4rem;
     display: flex;
     justify-content: start;
@@ -773,26 +773,90 @@ button.active {
 
 
 .footer__autor {
-    background-color: var(--primaryColor);
-    color: var(--cardColor);
-    display: flex;
-    flex-direction: column;
+    width: 320px;
     justify-content: center;
     align-items: center;
-    text-align: center;
-    padding: 1rem;
-    gap: 1rem;
-    font-size: 1.2rem;
-    font-weight: bold;
-    cursor: pointer;
 }
 
-.footer p:hover {
-    color: black;
+.footer__autor-card {
+    background-color: #222831;
+    height: 20rem;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: white;
+}
+
+.footer__autor-cardname {
+    margin-top: 15px;
+    font-size: 1.5em;
+}
+
+.card__image {
+    height: 100px;
+    width: 96px;
+    border-radius: 50%;
+    border: 5px solid #272133;
+    margin-top: 20px;
+}
+
+.social-icons {
+    padding: 0;
+    list-style: none;
+    margin: 2rem;
+}
+
+.social-icons li {
+    display: inline-block;
+    margin: 0.15rem;
+    position: relative;
+    font-size: 1.8rem;
+}
+
+.social-icons i {
+    color: var(--bodyColor);
+    position: absolute;
+    top: 8px;
+    left: 7.6px;
+    transition: all 265ms ease-out;
+}
+
+.social-icons a {
+    display: inline-block;
+}
+
+.social-icons a:before {
+    transform: scale(1);
+    -ms-transform: scale(1);
+    -webkit-transform: scale(1);
+    content: " ";
+    width: 45px;
+    height: 45px;
+    border-radius: 100%;
+    display: block;
+    background-color: var(--primaryColor);
+    transition: all 265ms ease-out;
+}
+
+.social-icons a:hover:before {
+    transform: scale(0);
+    transition: all 265ms ease-in;
+}
+
+.social-icons a:hover i {
+    transform: scale(2.2);
+    -ms-transform: scale(2.2);
+    -webkit-transform: scale(2.2);
+    background-color: var(--primaryColor);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    transition: all 265ms ease-in;
 }
 
 
-@media (min-width: 780px) {
+
+@media (min-width: 768px) {
     .navbar__ul {
         background-color: transparent;
         position: static;
@@ -866,6 +930,6 @@ button.active {
     }
 
     .footer__autor {
-        flex-direction: row;
+        width: 768px;
     }
 }
